fix settings template for logging

--- a/config/videos_capture_config_template.json
+++ b/config/videos_capture_config_template.json
@@ -20,6 +20,7 @@
   "Settings": {
     "segment_time": 3600,
     "sleep_time": 10,
+    "heartbeat_time": 3600,
     "log_path": "camera_recording.log"
   }
 }
